--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link href="%PUBLIC_URL%/styles.css" rel="stylesheet" defer>    
     <link href="%PUBLIC_URL%/headings.css" rel="stylesheet" defer>    
-    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" defer>    
+    <!-- <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" defer>     -->
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
