switching twitter logo out for email

--- a/public/index.html
+++ b/public/index.html
@@ -56,9 +56,9 @@
           Icons Created by Icon Depot from the Noun Project
         </span> -->
         <span class="rz-footer__content__follow">
-          <a href="https://twitter.com/RuzukuSupport" class="rz-footer__stamp-link">
-            <img src="%PUBLIC_URL%/icons/twitter.svg" alt="Twitter" class="rz-footer__stamp">
-            Ruzuku Support on Twitter  
+          <a href="mailto:support@ruzuku.com" class="rz-footer__stamp-link">
+            <img src="%PUBLIC_URL%/icons/email.svg" alt="support@ruzuku.com" class="rz-footer__stamp">
+            Contact Ruzuku Support
           </a>
         </span>
       </div>
